fixed the overlay overflow in the x and y achse

--- a/src/components/Order_Physical_Card_Page/OrderCard.css
+++ b/src/components/Order_Physical_Card_Page/OrderCard.css
@@ -4,10 +4,11 @@
   padding: 0;
   box-sizing: border-box;
   color: hsla(0, 0%, 20%, 1);
+  width: 98vw;
 }
 
 .OC__main-container {
-  height: 100vh;
+  height: 90vh;
   width: 90vw;
   float: right;
   display: flex;
